--- a/src/UpperBar/UpperBar.css
+++ b/src/UpperBar/UpperBar.css
@@ -63,6 +63,35 @@
     
 }
 
+.myHiddenOptions-div{
+    display: flex;
+    position: fixed;
+    justify-content: center;
+    left: 0;
+    height: 80px;
+
+  
+    justify-content: space-around;
+    text-shadow: 2px 2px 10px rgba(66, 66, 66, 0.999);
+    width: 100%;
+    font-weight:bold;
+    cursor:default;
+    color:aliceblue;
+    background-color: rgb(73, 73, 73);
+
+    visibility: hidden;
+    bottom: 0;
+    z-index: 3;
+    padding: 10px;
+
+    
+}
+
+.myHiddenOptions-img{
+    width: 40px;
+
+}
+
 .myOptions-para:hover{
     color: rgb(249, 187, 0);
 
@@ -107,17 +136,19 @@
     animation-timing-function: ease-out;
 }
 
+
+.myDepDiv-div1::-ms-ticks-after{
+
+
+    animation-name: optionsAppearence;
+    animation-duration: 0.3s;
+    animation-timing-function: ease-out;
+}
 .myDepDiv-div1{
     
-    height: 280px;
-    width: 350px;
-    margin-left: 46.4%;
-    margin-top: -10px;
-
-
-    
-    position: fixed;
     background-color: rgb(87, 87, 87);
+    margin-top: 57px;
+    height: 293px;
 
     box-shadow: 2px 2px 10px rgb(52, 52, 52);
 
@@ -163,3 +194,12 @@
 .deptOption1-opt:hover{
     color: rgb(249, 187, 0);
 }
+
+@media only screen and (max-width: 1050px) {
+    .myOptions-div{
+        visibility: hidden;
+    }
+    .myHiddenOptions-div{
+        visibility: visible;
+    }
+  }
