--- a/src/HomePage/AboutUsSection.css
+++ b/src/HomePage/AboutUsSection.css
@@ -12,6 +12,7 @@
   width: 50%;
   height: 100%;
   margin: 140px;
+  margin-top: 50px;
   border-radius: 5px;
   box-shadow: 2px 2px 10px rgba(95, 95, 95, 0.481);
 
@@ -22,7 +23,7 @@
 .mainWhiteSquare-div{
   display: flex;
   width: 45%;
-  height: 470px;
+  height: 550px;
   margin-top: 240px;
   margin-left: -320px;
   border-radius: 5px;
@@ -191,41 +192,195 @@
 
 }
 
-.miniOption0-div{
-  width: 10px;
-  height: 10px;
-  background-color: rgb(212, 212, 212);
-  margin: 0 auto;
 
-  border-radius: 100px;
-  
-  animation-name: buttonAnimation;
-  animation-duration: 0.2s;
 
-}
-.miniOption1-div{
-  width: 10px;
-  height: 10px;
-  background-color: rgb(249, 187, 0);
-  margin: 0 auto;
-
-  border-radius: 100px;
-
-  animation-name: buttonAnimationReverse;
-
-  animation-duration: 0.000001s;
-}
-
-.mainMiniDiv-div{
+.mainHiddenWhiteSquare0-div{
+  visibility: hidden;
   display: flex;
-  width: 60px;
+  justify-content: start;
+  color: aliceblue;
+}
+
+.mainHiddenWhiteSquare1-div{
+  visibility: hidden;
+  display: flex;
+  justify-content: end;
+ 
+}
+
+.myMainHiddenAboutUsPara0-para{
+  margin: 60px;
+  margin-left: 30px;
+
+  width: fit-content;
+  color: rgb(255, 255, 255);
+  height: fit-content;
+  text-align: start;
+  position: absolute;
+
+  font-size: 17px;
+  font-weight: 500;
+
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+  padding: 10px;
+  padding-left: 0;
+
+  border: solid rgb(249, 187, 0);
+  border-width: 0px 0px 4px 0px;
+
+  box-shadow: 0px 2px rgba(50, 50, 50, 0.395)
+}
+
+.myMainHiddenAboutUsPara1-para{
+  margin-top: 70px;
   
-  margin-left: 67%;
-  margin-top: -100px;
-  margin-bottom: 200px;
-  position: relative;
+
+
+  
+  color: rgb(255, 255, 255);
+  width: 150px;
+  
+  text-align: end;
+  position: absolute;
+
+  font-size: 17px;
+  font-weight: 500;
+
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+  padding: 10px;
+  padding-right: 20px;
+ 
+
+  border: solid rgb(249, 187, 0);
+  border-width: 0px 0px 4px 0px;
+
+  box-shadow: 0px 2px rgba(50, 50, 50, 0.395)
+}
+
+.mySecondHiddenAboutUsPara0-para{
+  margin: 60px;
+  margin-left: 30px;
+  margin-top: 120px;
+  width: 85%;
+  color: rgb(207, 207, 207);
+  height: fit-content;
+  text-align: start;
+  position: absolute;
+
+  font-size: 13px;
+  font-weight: 400;
 
   
 
+  padding: 10px;
+  padding-left: 0;
 
+}
+
+.mySecondHiddenAboutUsPara1-para{
+  margin: 60px;
+  margin-right: 10px;
+  margin-top: 120px;
+  width: 85%;
+  color: rgb(207, 207, 207);
+  height: fit-content;
+  text-align: end;
+  position: absolute;
+
+  font-size: 13px;
+  font-weight: 400;
+
+  
+
+  padding: 10px;
+  padding-left: 0;
+
+}
+.myHiddenAboutUsPara1-para{
+  margin: 70px;
+}
+
+@media(max-width: 1050px){
+  .myAboutUsImage-img{
+    margin: 40px;
+    margin-bottom: 30%;
+    width: 80%;
+    height: auto;
+ 
+    
+  }
+  .mainWhiteSquare-div{
+    width: 70%;
+    height: 470px;
+    margin-top: 240px;
+    margin-left: -50%;
+  
+    background-color: rgb(255, 255, 255);
+  }
+}
+
+@media(max-width: 750px){
+  .myAboutUsImage-img{
+    margin: 0 auto;
+    margin: 40px;
+    margin-bottom: 50%;
+    width: 80%;
+    height: 600px;
+    object-fit: cover;
+    position: relative;
+    
+ 
+    
+  }
+  .mainWhiteSquare-div{
+    width: 60%;
+    height: 470px;
+    margin-top: 140px;
+    
+    
+    background-color: rgb(255, 255, 255);
+    visibility: hidden;
+  }
+  .mainHiddenWhiteSquare0-div{
+    width: 60%;
+    height: 600px;
+    margin: 0 auto;
+    margin-left: 40px;
+    margin-top: 40px;
+
+
+    
+
+    padding: -100px;
+    position: absolute;
+    z-index: 2;
+
+    visibility: visible;
+    background-color: rgba(0, 0, 0, 0.518);
+    border-radius: 5px;
+ 
+
+  }
+  .mainHiddenWhiteSquare1-div{
+    width: 60%;
+    height: 600px;
+    margin: 0 auto;
+    margin-left: 40px;
+    margin-top: 40px;
+
+
+    
+
+    padding: -100px;
+    position: absolute;
+    z-index: 2;
+
+    visibility: visible;
+    background-color: rgba(0, 0, 0, 0.518);
+    border-radius: 5px;
+ 
+
+  }
 }
