--- a/src/HomePage/HomePageSection.css
+++ b/src/HomePage/HomePageSection.css
@@ -199,7 +199,7 @@
     margin: 0 auto;
     margin-top: 200px;
     height: 250px;
-    width: 550px;
+    width: 40%;
     color: aliceblue;
     display: flex;
     justify-content:flex-end;
@@ -222,15 +222,17 @@
 .mainPara1-para{
  
     font-size: 40px;
-    font-weight: 700;
-     
+    font-weight: 600;
+    font-family: "Impact", "fantasy";
+
     text-shadow: 2px 2px 10px rgb(66, 66, 66);
     text-align: end;
-    width: 500px;
+    
+
    
     margin-bottom: 10px;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: rgb(83, 83, 83);
+      margin-right: 10px;
+
 
 
 }
@@ -256,8 +258,9 @@
    
     text-shadow: 2px 2px 10px rgb(66, 66, 66);
     text-align: end;
-    width: 500px;
+    width: fit-content;
     margin-bottom: 60px;
+    margin-right: 10px;
 
 
 } 
@@ -387,6 +390,9 @@
 
 @media(max-width: 1050px){
     .mainDiv0-div{
+        width: 74%;
+    }
+    .mainDiv1-div{
         width: 74%;
     }
 }
