--- a/src/UpperBar/UpperBar.css
+++ b/src/UpperBar/UpperBar.css
@@ -70,6 +70,10 @@
     left: 0;
     height: 80px;
 
+    border: solid rgb(249, 187, 0);
+    border-width: 2px 0px 0px 0px;
+
+
   
     justify-content: space-around;
     text-shadow: 2px 2px 10px rgba(66, 66, 66, 0.999);
