--- a/src/UpperBar/UpperBar.css
+++ b/src/UpperBar/UpperBar.css
@@ -1,14 +1,21 @@
 
 .MainDiv-div{
-    position: relative;
-    margin-bottom: -260px;
-    padding: 100px;
-    padding-top: 25px;
+    width: 100%;
+    margin: 0 auto;
+    position: fixed;
+
+    justify-content: space-between;
+
+    z-index: 20;
+
+    padding: 85px;
+    margin-top: -260px;
+    
 }
 
 
 .tntPara{
-    justify-self: flex-start;
+
     width: 15px;
     font-size: 24px;
     font-family: "Impact", "fantasy";
@@ -20,27 +27,103 @@
     padding: 10px;
     padding-left: 5px;
     padding-right: 42px;
-    margin-top: -10px ;
+    
     cursor:default;
     
 }
 
-.myUpperLine{
-    width: 100%;
-    height: 2px;
+.facebookImage-img{
+   
+    height: 47px;
+    width: 47px;
 
+    background-color: rgba(161, 161, 161, 0.951);
+    padding: 3px;
+
+    left: 0;
+    bottom: 0;
+    
+    
+    margin: 20px;
+    margin-bottom: 150px;
+ 
+    border-radius: 5px;
+
+    padding: 4px;
+ 
+    position: fixed;
+
+    z-index: 4;
+    cursor: pointer;
+
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.282);
 }
+
+
+
+.instagram-img{
+   
+    height: 47px;
+    width: 47px;
+
+    background-color: rgba(161, 161, 161, 0.951);
+    padding: 3px;
+
+    left: 0;
+    bottom: 0;
+
+    margin: 20px;
+    margin-bottom: 90px;
+ 
+    border-radius: 5px;
+ 
+    position: fixed;
+
+    z-index: 4;
+
+    cursor: pointer;
+
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.282);
+}
+
+
+
+.phoneCall-img{
+   
+    height: 50px;
+    width: 50px;
+
+    
+    object-fit:contain;
+
+    left: 0;
+    bottom: 0;
+
+    margin: 20px;
+    margin-bottom: 210px;
+
+    z-index: 4;
+ 
+    border-radius: 5px;
+ 
+    position: fixed;
+
+    cursor: pointer;
+
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.282);
+}
+
 
 .myOuterDepartmentsDiv-div{
     
-    height: 350px;
+    height: 380px;
     width: 350px;
     margin-left: 46.4%;
-    margin-top: -65px;
+    margin-top: -125px;
+    padding-top: 57px;
 
+   z-index: 420;
     position: fixed;
-
-
     
 
     animation-name: optionsAppearence;
@@ -50,15 +133,21 @@
 
 .myOptions-div{
     display: flex;
-    justify-content: center;
+   
     margin: 0 auto;
-    margin-top: -100px;
+
     justify-content: space-around;
     text-shadow: 2px 2px 10px rgba(66, 66, 66, 0.999);
-    width: 600px;
+    width: 700px;
+    height: fit-content;
     font-weight:bold;
     cursor:default;
     color:aliceblue;
+    
+    
+    margin-top: 10px;
+
+    
 
     
 }
@@ -73,7 +162,7 @@
     border: solid rgb(249, 187, 0);
     border-width: 2px 0px 0px 0px;
 
-
+    
   
     justify-content: space-around;
     text-shadow: 2px 2px 10px rgba(66, 66, 66, 0.999);
@@ -83,6 +172,7 @@
     color:aliceblue;
     background-color: rgb(73, 73, 73);
 
+    
     visibility: hidden;
     bottom: 0;
     z-index: 3;
@@ -90,35 +180,53 @@
 
     
 }
+.myHiddenOptions-para{
+    display: grid;
+    justify-self: center;
+
+  
+}
 
 .myHiddenOptions-img{
     width: 40px;
+    margin: 0 auto;
+
+}
+
+.myOptions-para{
+    height: 20px;
+    justify-self: center;
+    padding-top: 40px;
+    padding-bottom: 35px;
+    margin-top: -40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding: 0 auto;
+    
+   
 
 }
 
 .myOptions-para:hover{
     color: rgb(249, 187, 0);
-
+    background-color: rgba(29, 29, 29, 0.178);
+    height: 70px;
+   
 
 
 }
 
-.myLogo-div{
-    display: grid;
-    justify-content: flex-end;
-    cursor:default;
-}
 
 .myLogoImage-img{
     width: 100px;
-    margin-top: -50px;
+    height: 55px;
 
     cursor:default;
 }
 
 .myDepDiv-div0{
     background-color: rgb(87, 87, 87);
-    margin-top: 57px;
+    margin-top: 0px;
     height: 293px;
 
     box-shadow: 2px 2px 10px rgb(52, 52, 52);
@@ -129,8 +237,53 @@
 
     to {opacity: 1;}
 }
+
+@keyframes hiddenOptionsAppearence {
+    from {opacity: 0;}
+
+    to {opacity: 1;}
+}
 /* 
 ///////// */
+
+.myHiddenDepDiv-div0{
+    animation-name: hiddenOptionsAppearence;
+    animation-duration: 0.1s;
+    animation-timing-function: ease-out;
+    width: fit-content;
+    padding: 20px;
+    height: 500px;
+    
+    
+    margin: 0 auto;
+    margin-top: 200px;
+    background-color: rgb(87, 87, 87);
+
+}
+.myHiddenDepDiv-div1{
+    animation-name: hiddenOptionsAppearence;
+    animation-duration: 0.1s;
+    animation-timing-function: ease-out;
+    width: fit-content;
+    padding: 20px;
+    height: 500px;
+    
+    
+    margin: 0 auto;
+    margin-top: 200px;
+    background-color: rgb(87, 87, 87);
+}
+.HiddendeptOption0-opt{
+    color: white;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.HiddendeptOption1-opt{
+    color: white;
+    margin: 0 auto;
+    padding: 10px;
+}
 
 .myDepDiv-div0::-ms-ticks-after{
 
@@ -151,7 +304,7 @@
 .myDepDiv-div1{
     
     background-color: rgb(87, 87, 87);
-    margin-top: 57px;
+    margin-top: -10px;
     height: 293px;
 
     box-shadow: 2px 2px 10px rgb(52, 52, 52);
@@ -171,7 +324,9 @@
     font-weight: 400;
     font-size: smaller;
     cursor: pointer;
-    padding-top: 5px;
+    padding-top: 10px;
+
+
 
     animation-name: optionsAppearence;
     animation-duration: 0.3s;
@@ -192,7 +347,7 @@
     font-weight: 400;
     font-size: smaller;
     cursor: pointer;
-    padding-top: 5px;
+    padding-top: 10px;
   
 }
 .deptOption1-opt:hover{
@@ -202,6 +357,7 @@
 @media only screen and (max-width: 1050px) {
     .myOptions-div{
         visibility: hidden;
+        display: none
     }
     .myHiddenOptions-div{
         visibility: visible;
@@ -212,8 +368,10 @@
 @media only screen and (max-width: 750px) {
 
     .MainDiv-div{
-        padding-left: 15%;
-        padding-right: 15%;
+        padding-left: 10px;
+        padding-right: 10px;
+        width: 100%;
+   
     }
     .myHiddenOptions-div{
         height: 50px;
@@ -227,4 +385,11 @@
     .myHiddenOptions-para{
         font-size: 10px;
     }
+    .myHiddenDepDiv-div0{
+        margin-top: 230px;
+    }
+    .myHiddenDepDiv-div1{
+        margin-top: 230px;
+    }
 }
+
