--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,237 +1,344 @@
-/* Footer Section */
-
 .mainFooterDiv-div{
   width: 100%;
-  height: 530px;
-
-
-  margin-bottom: -1000px;
-  
-
+  height: fit-content;
   background-color: rgb(73, 73, 73);
-  bottom: 0;
-  
+  overflow:hidden;
+
 }
 
-.upRightYellowSquareFooter-div{
+.footerUpRightSquare-div{
+ 
   width: 77%;
   height: 60px;
-  margin-top: -30px;
-  
+
+
   border-radius: 5px;
-  display: flex;
-  justify-self: end;
   box-shadow: 2px 2px rgba(54, 54, 54, 0.307);
 
-  position: relative;
+  position: absolute;
 
   background-color: rgb(249, 187, 0);
 
-}
+  margin-top: -30px;
 
+  margin-bottom: 100px;
 
-.myInnerYelloSquareFooterPara0-para{
-  color: rgb(109, 109, 109);
+  z-index: 10;
 
-  padding-top: 20px;
-  padding-left: 2%;
-  font-size: 17px;
-  font-weight: 600;
-  text-shadow: 2px 2px rgba(74, 74, 74, 0.13);
-
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-}
-
-.myInnerYelloSquareFooterPara1-para{
-  color: rgb(109, 109, 109);
-
-  padding-top: 20px;
-  padding-left: 2%;
-  font-size: 17px;
-  font-weight: 600;
-  text-shadow: 2px 2px rgba(74, 74, 74, 0.13);
-
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-}
-
-.myFooterLine-div{
-  width: 80%;
-  height: 2px;
-
-  background-color: rgb(249, 187, 0);
-
-  margin: 0 auto;
-  margin-top: 50px;
-}
-
-.myFooterContent-div{
-  display: flex;
-
-  width: 75%;
-
-  margin: 0 auto;
-
-  justify-content: space-between;
-}
-
-
-.myFooterTNTImage-div{
-  display:grid;
-  width:30%;
-}
-.myFooterImage-img{
-  width: 100%;
-  height: 80%;
-  margin-top: 50px;
 
 }
 
 
-.myFooterPara-para{
- color: aliceblue;
+.myOuterMainFooterPages-para0{
+  display:flex; 
+  justify-content:space-between;
+
+}
+.myOuterMainFooterPages-para1{
+  display:flex; 
+  justify-content:space-between;
 }
 
-.mySiderLine-div{
-  height: 300px;
-  width: 2px;
-  margin-top: 15px;
-  margin-bottom: -35px;
-  background-color: rgb(249, 187, 0);
-}
-
-.myFooterinBetweenLine-div{
-  width: 100%;
-  height: 2px;
-
-  background-color: rgb(249, 187, 0);
-
-  margin: 0 auto;
-}
-
-.myFooterInnerPara-para{
-  margin: 0 auto;
+.myMainFooterPages-para0{
   color: white;
+  margin: 25px;
+  margin-left: 115px;
+
+  font-family: Arial, Helvetica, sans-serif;
+
+  text-shadow: 2px 2px 4px rgba(47, 47, 47, 0.999);
+
+
+  font-weight:500;
+  cursor:default;
+
+}
+
+.myMainFooterPages-para1{
+  color: white;
+  margin: 25px;
+  margin-left: 115px;
+
+  font-family: Arial, Helvetica, sans-serif;
+
+  text-shadow: 2px 2px 4px rgba(47, 47, 47, 0.999);
+
+
+  font-weight:500;
+  cursor:default;
+
+}
+
+.myFooterPages-para0{
+  color: rgb(165, 165, 165);
+  margin: 50px;
+  margin-left: 115px;
+
+  font-family: Arial, Helvetica, sans-serif;
+
+  text-shadow: 2px 2px 4px rgba(47, 47, 47, 0.999);
+  margin-bottom: -40px;
+
+  font-size: 12px;
+
+  font-weight:500;
+
+
+  cursor: pointer;
+
+
+
+}
+
+.myFooterPages-para1{
+  color: rgb(165, 165, 165);
+  margin: 50px;
+  margin-left: 115px;
+
+
+  font-family: Arial, Helvetica, sans-serif;
+
+  text-shadow: 2px 2px 4px rgba(47, 47, 47, 0.999);
+  margin-bottom: -40px;
+
+  font-size: 12px;
+
+  font-weight:500;
+
+
+  cursor: pointer;
+
+}
+
+
+
+.myFooterPages-Div0{
+  padding-bottom: 10px;
+
   
 }
 
-.myFooterInnerNumber-para{
-  margin: 0 auto;
+.myFooterPages-Div1{
+  padding-bottom: 50px;
+  
+
+  
+}
+
+
+
+.myFooterMap-Div{
+  width: 400px;
+  height: 300px;
+  background-color: rgb(190, 190, 190);
+
+  margin-top: 30px;
+
+  box-shadow: 1px 1.2px 1px 0px  rgb(51, 51, 51);
+  
+  border-radius: 5px;
+}
+
+.veryMiniMapFacekook{
+  width: 50px;
+  height: 40px;
+
+  background-color: rgb(190, 190, 190);
+
+  margin-right: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  box-shadow: 1px 1.2px 1px 0px  rgb(51, 51, 51);
+}
+.veryMiniMapInstagram{
+  width: 50px;
+  height: 40px;
+
+  background-color: rgb(190, 190, 190);
+
+  margin-right: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  box-shadow: 1px 1.2px 1px 0px  rgb(51, 51, 51);
+}
+.veryMiniMapWhatsapp{
+  width: 50px;
+  height: 40px;
+
+  background-color: rgb(190, 190, 190);
+
+  margin-right: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+
+  box-shadow: 1px 1.2px 1px 0px  rgb(51, 51, 51);
+}
+
+.locationPara-para{
+  margin-top: 10px;
   color: white;
-
-  margin: 10px;
-  margin-bottom: -10px;
+  font-size: 14px;
+  right: 0;
+  justify-self: end;
 }
 
-.myFooterLogos-div{
-  width: 100%;
-
-
-  margin-top: 15px;
-
-  display: flex;
-  justify-content: space-around;
-
-}
-
-.myFooterLogoOne-div{
-  width: 50px;
-  height: 50px;
-
-  border-radius: 100px;
-
-  margin-top: 15px;
-}
-
-.myFooterLogoImage-img{
-  width: 50px;
-}
-
-.myFooterMapDiv-div{
-
-  height: 250px;
-
-  margin-top: 40px;
-  background-color: rgb(169, 169, 169);
-}
-
-.myFooterMapImage-img{
-  width: 100%;
-  height: 100%;
-
-  object-fit: cover;
-  transform: scale(1.2);
-}
-.myLocation-para{
-  text-shadow: 2px 2px 10px rgba(66, 66, 66, 0.999);
-  width: 220px;
-  font-weight:bold;
-  cursor:default;
-  color:aliceblue;
-}
-.myUnderFooterDiv-div{
-  width: 100%;
-  height: 50px;
-  margin-top: 40px;
+.myInnerFooterLine-div{
+  width: 95%;
+  height: 3px;
 
   background-color: rgb(249, 187, 0);
-}
-.myFooterInnerPara-Div{
-  width:20%;
-  margin-top:30px;
 
-}
-.mainHiddenFooterDiv-div{
-  background-color: rgb(73, 73, 73); 
-   width: 100%;
-   height: 700px;
+  box-shadow: 1px 1.2px 1px 0px  rgb(51, 51, 51);
 
-
-  visibility: hidden;
+  margin-top: 75px;
+  border-radius: 5px;
 }
 
-.myHiddenFooterTNTImage-div{
-  width: 70%;
+.mySecondayDiv-div{
+  display: flex;
+}
+
+.myInnerFooterEndLine-div{
+  width: 100%;
+  height: 60px;
+
+  background-color: rgb(249, 187, 0);
+
+  box-shadow: 1px 1.2px 1px 0px  rgb(51, 51, 51);
+
+  margin-top: 75px;
+
+  display: flex;
+
+
+}
+
+.veryLowPara-div{
+  display:flex; 
+  justify-content:space-between;
+  width:70%;
+  margin:0 auto;
+}
+
+.veryLowPara-para{
+  color: white;
+  font-size: 14px;
+  right: 0;
+
+}
+
+
+.creditPara-para{
   margin: 0 auto;
+  margin-top: 15px;
 
-  padding-top: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+
+
+
+  font-size: 16px;
+
+  font-weight:500;
+
+}
+
+
+.myHiddenMap-div{
+  display: none;
+  width: 80%;
+}
+
+.myHiddenSecondayDiv-div{
+  display: none;
 
 }
 
 @media only screen and (max-width: 1050px) {
-  .mainFooterDiv-div{
-   visibility: hidden;
-   margin-top: 600px;
-  }
-
-  .mainHiddenFooterDiv-div{
-    visibility: visible;
-  }
-  .myHiddenFooterTNTImage-div{
-    width: 50%;
- 
-  
-  }
-  .myUnderFooterDiv-div{
-    visibility: hidden;
-    display: none;
+  .myFooterMap-Div{
+    width: 100%;
 
   }
+  .myHiddenMap-div{
+    display: grid;
+  }
+  .myUnHiddenMap-div{
+  display: none;
+  }
+  .myOuterMainFooterPages-para0{
+    display:grid; 
+
+  }
+  .myOuterMainFooterPages-para1{
+    display:grid; 
+
+  }
+  .myInnerFooterLine-div{
+    width: 100%;
+
+  }
+
 
 }
 
 @media only screen and (max-width: 750px) {
-  .mainFooterDiv-div{
-   visibility: hidden;
+  .myFooterMap-Div{
+    width: 100%;
+  }
+  .myHiddenSecondayDiv-div{
+    display: grid;
+
+   
+  }
+  .mySecondayDiv-div{
+    display: none;
+  }
+  .veryLowPara-div{
+    width: 100%;
+    display: grid;
+  }
+  .myMainFooterPages-para0{
+    margin: 10px;
+    width: 100%;
+
+  
+  }
+  .myMainFooterPages-para1{
+    margin: 10px;
+    width: 100%;
+
+  
+  }
+  .myOuterMainFooterPages-para0{
+    display:grid; 
+    margin-left: 60px;
+   
+  }
+  .myOuterMainFooterPages-para1{
+    display:grid; 
+    margin-left: 60px;
+   
   }
 
-  .mainHiddenFooterDiv-div{
-    visibility: visible;
+  .myFooterPages-para0{
+    color: rgb(165, 165, 165);
+    margin: 0 auto;
+    margin: 10px;
+    margin-left: 10px;
+
+    cursor: pointer;
   }
-  .myHiddenFooterTNTImage-div{
-    width: 70%;
- 
+  .myFooterPages-para1{
+    color: rgb(165, 165, 165);
+    margin: 0 auto;
+    margin: 10px;
+    margin-left: 10px;
+
+    cursor: pointer;
+  }
+  .veryLowPara-para{
+    margin-left: 10px;
+    margin-top: 20px;
+    margin-bottom: -10px;
   
   }
 
