--- a/src/App.css
+++ b/src/App.css
@@ -32,20 +32,13 @@ body{
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
 
 .myLanButton{
 
   margin-top: 85px;
   padding-top: -50px;
-  z-index: 50;
+  z-index: 50000000000000;
   margin-right: 100px;
   border-radius: 5px;
   cursor: pointer;
